--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,24 @@ repositories {
 
 dependencies {
 
+    //logbackVersion = '1.1.2'
+
     compile (
         'org.codehaus.groovy:groovy-all:2.3.4',
         'org.codehaus.gpars:gpars:1.2.1',
+        //'org.slf4j:slf4j-api:1.7.10'
+        'org.slf4j:slf4j-simple:1.7.10',
+        //"ch.qos.logback:logback-classic:1.1.2",
+        //"ch.qos.logback:logback-core:1.1.2",
     )
     testCompile(
         group: 'junit', name: 'junit', version: '4.11',
         'org.spockframework:spock-maven:0.7-groovy-2.0',
     )
+
+//    testRuntime(
+//        "ch.qos.logback:logback-classic:1.1.2",
+//        "ch.qos.logback:logback-core:1.1.2",
+//        //group: 'ch.qos.logback', name:'logback-core', version: logbackVersion
+//    )
 }
